--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ Flask==1.1.2
 Flask-Bootstrap==3.3.7.1
 Flask-Cors==3.0.10
 Flask-Session==0.3.2
+gunicorn==20.1.0
 ipykernel==5.5.3
 ipython==7.22.0
 ipython-genutils==0.2.0
